--- a/package.json
+++ b/package.json
@@ -449,5 +449,7 @@
     "devDependencies": {
         "vscode": "^1.1.34"
     },
-    "dependencies": {}
+    "dependencies": {
+        "dbus-native": "^0.4.0"
+    }
 }
