--- a/package.json
+++ b/package.json
@@ -447,6 +447,7 @@
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
+        "eslint": "^6.8.0",
         "vscode": "^1.1.34"
     },
     "dependencies": {
